--- a/liste_jeu.html
+++ b/liste_jeu.html
@@ -6,12 +6,12 @@
 		<script src="js/jquery-2.1.3.min.js"></script>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="../images/icone_site/favicon.png">
+		<link rel="icon" href="images/icone_site/favicon.png">
 
 		<!-- Bootstrap -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link 	href="../css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<script type="text/javascript" src="../js/bootstrap.js"></script>
+		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+		<script type="text/javascript" src="js/bootstrap.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +19,7 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		<link 	href="../css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
+		<link 	href="css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
 	</head>
 	<body>
 		<?php
