--- a/accessoires/barre_page.html
+++ b/accessoires/barre_page.html
@@ -1,49 +1,30 @@
-<?php
-	$page=$_SERVER['REQUEST_URI'];
-	$p=substr($page,-6); /*$p est le numéro de la page inclu dans le nom du fichier*/
-	$start=0;
-	$end=1;
-	$i=1;
-	if($page!="/".$type.".php"){
-		while($p!=$i){
-			$start=$start+2;
-			$end=$end+2;
-			$i++;
-		}
-	}else{
-		$p=1;
-	}
-	$class2[$start]='class="active"';
-	$class2[$end]='<span class="sr-only">(curent)</span>';
-	$start=0;
-	$end=1;
-	$i=1;
-?>
-<nav style="text-align:center;">
-  <ul class="pagination">
-	<?php if(file_exists($type.'/'.$type.'_p'.($p-1).'.html')){?><!--Si la page précédente existe-->
-		<li>
-			<a href="<?php echo $type;?>.php?page=<?php echo $type;?>_p<?php echo($p-1);?>.html" aria-label="Previous">
-			<span aria-hidden="true">&laquo;</span>
-		  </a>
-		</li>
-	<?php }
-	while (file_exists($type.'/'.$type.'_p'.($i).'.html')){?> <!--Tant que la page existe-->
-		<li <?php if (!empty($class2[$start])){echo $class2[$start];}?> >
-			<a href="<?php echo $type; ?>.php?page=<?php echo $type;?>_p<?php echo $i;?>.html"><?php echo $i; if (!empty($class2[$end])){echo $class2[$end];}?></a>
-		</li>
-		<?php
-		$i++;
-		$start=$start+2;
-		$end=$end+2;
-	}?>
-	<?php if(file_exists($type.'/'.$type.'_p'.($p+1).'.html')){ ?><!--Si la page suivant existe-->
-		<li>
-			<a href="<?php echo $type;?>.php?page=<?php echo $type ;?>_p<?php echo($p+1);?>.html" aria-label="Next">
-			<span aria-hidden="true">&raquo;</span>
-		  </a>
-		</li>
-	<?php }
-	?>	
-  </ul>
-</nav>
+<?php if($nb_page > 1) { ?>
+	<nav style="text-align: center">
+		<ul class="pagination" style="margin-bottom:0;">
+			<?php if($page > 1){ ?>
+			<li>
+				<a href="<?php echo $fichier."&page=".($page-1); ?>" aria-label="Previous">
+					<span aria-hidden="true"><span class="glyphicon glyphicon-triangle-left"></span> Précédent</span>
+				</a>
+			</li>	
+			<?php } 
+			
+			for ($i=1; $i <= $nb_page ;$i++) { ?>
+			<li <?php if ($i == $page){ ?> class="active" <?php } ?> >
+				<a href="<?php echo $fichier."&page=".$i; ?>">
+					<?php if ($i == $page){ ?> <span class="sr-only">(current)</span>
+					<?php } echo $i; ?>
+				</a>
+			</li>
+			<?php }
+			
+			if ($page < $nb_page){ ?>	
+			<li>
+				<a href="<?php echo $fichier."&page=".($page+1); ?>" aria-label="Next">
+					<span aria-hidden="true">Suivant <span class="glyphicon glyphicon-triangle-right"></span></span>
+				</a>
+			</li>
+			<?php } ?>
+		</ul>
+	</nav>
+<?php } ?>
