--- a/accessoires/menu.html
+++ b/accessoires/menu.html
@@ -16,12 +16,12 @@
 	  <ul class="nav navbar-nav">
 		<li>
 			<a href="club.php">
-				<span class="glyphicon glyphicon-home"></span>Le club
+				<span class="glyphicon glyphicon-home"></span> Le club
 			</a>
 		</li>
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-				<span class="glyphicon glyphicon-knight"></span>Jeux<span class="caret"></span>
+				<span class="glyphicon glyphicon-knight"></span> Jeux <span class="caret"></span>
 			</a>
 			<!--Liste des jeux de la base de donnée-->
 			<ul class="dropdown-menu" role="menu">
@@ -36,50 +36,44 @@
 		</li>
 		<li>
 			<a href="actualite.php">
-				<span class="glyphicon glyphicon-calendar"></span>
-				Agenda
+				<span class="glyphicon glyphicon-calendar"></span> Agenda
 			</a>
 		</li>
 		<li>
-			<a href="forum/forum.php">
-				<span class="glyphicon glyphicon-comment"></span>
-				Forum
+			<a href="forum/">
+				<span class="glyphicon glyphicon-comment"></span> Forum
 			</a>
 		</li>
 	  </ul>
 	  <ul class="nav navbar-nav navbar-right">
-			<li>
+			<!--<li>
 				<a href="contact.php">
 					<span class="glyphicon glyphicon-envelope"></span>
 					Contact
 				</a>
-			</li>
+			</li>-->
 			<?php if(isset($_SESSION['id_user'])){ ?><!-- Si l'utilisateur est connecté afficher -->
 				<li class="dropdown">
                     <a id="drop_compte" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img alt="av" id="avatarMenu" class="img-circle" height="40" width="40" src="images/avatars/<?php echo $_SESSION['avatars']; ?>"/><p id="compteMenu"><?php echo $_SESSION['pseudo']; ?><br/> <span class="small">(<?php echo recup_rang($_SESSION['droits']) ?>)</span></p><span id="caretCompte" class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
 					<li>
 						<a href="deconnexion.php">
-							<span class="glyphicon glyphicon-off"></span>
-							Se déconnecter
+							<span class="glyphicon glyphicon-off"></span> Se déconnecter
 						</a>
 					</li>
 					<li>
 						<a href="profil.php">
-							<span class="glyphicon glyphicon-user"></span>
-							Profil
+							<span class="glyphicon glyphicon-user"></span> Profil
 						</a>
 					</li>
 					<li>
 						<a href="edit_jeu.php">
-							<span class=""></span>
-							 Ajouter un jeu
+							<span class=""></span> Ajouter un jeu
 						</a>
 					</li>
 					<li>
 						<a href="actualite.php?passer">
-							<span class=""></span>
-							Evénement archiver
+							<span class=""></span> Evénement archiver
 						</a>
 					</li>
 					</ul>
@@ -87,8 +81,7 @@
 			<?php }else { ?> <!-- Sinon afficher -->
 				<li>
 					<a href="connexion.php">
-						<span class="glyphicon glyphicon-user"></span>
-						Mon compte
+						<span class="glyphicon glyphicon-user"></span> Mon compte
 					</a>
 				</li>
 			<?php } ?>
