--- a/actualite.html
+++ b/actualite.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Machiavel Fantasy - Actualité</title>
-		<link 	href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+
+        <script src="js/jquery-2.1.3.min.js"></script>
 		<link rel="icon" href="images/icone_site/favicon.png">
-		<script src="js/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,8 +28,8 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-md-2">
-			<?php //include_once("accessoires/calendrier_aside.php");
-				  //include_once("accessoires/actualite_mini.php");?>
+			<?php include_once("accessoires/calendrier_aside.php");
+				  include_once("accessoires/actualite_mini.php");?>
 		</div>
 		<div class="col-md-8">
 			<div class="panel panel-default contenu">
@@ -59,7 +59,7 @@
 								<div class="date_event">le <?php echo $date_event[$i]; ?></div><!--date de l'événement-->								
 								
 								<!--------------Bouton pour modifier ou supprimer une actualité------------------------->
-								<?php if(!isset($supprimer) && $afficher!='<' && ($_SESSION['droits']==3 || $_SESSION['id_user'] == $id_user_event[$i])){ ?><!--Si l'utilisateur est un administrateur ou un modérateur alors-->
+								<?php if(isset($_SESSION['id_user']) && !isset($supprimer) && $afficher!='<' && ($_SESSION['droits']==3 || $_SESSION['id_user'] == $id_user_event[$i])){ ?><!--Si l'utilisateur est un administrateur ou un modérateur alors-->
 								<div class="btn-group btn-group-xs" style="float:right;" role="group" aria-label="...">
 								  <a type="button" class="btn btn-default" href="edit_actualite.php?modifier=<?php echo $id_event[$i] ; ?>">
 									<span class="glyphicon glyphicon-repeat" aria-hidden="true"></span><!--bouton pour modifié l'actualité-->
@@ -82,7 +82,7 @@
 							<div class="col-md-9">
 								<div class="media-body">									
 									<p class="text-justify"><?php echo $text_event[$i]; ?></p>
-									<?php if (isset($_GET['supprimer'])&& $supprimer == $id_event[$i] && ($_SESSION['id_user']== $id_user_event[$i] || $_SESSION['droits'] == 3)){ ?><!--Si on a appuiyé sur le bouton supprimer alors afficher les boutons de confirmation-->
+									<?php if (isset($_SESSION['id_user']) && isset($_GET['supprimer'])&& $supprimer == $id_event[$i] && ($_SESSION['id_user']== $id_user_event[$i] || $_SESSION['droits'] == 3)){ ?><!--Si on a appuiyé sur le bouton supprimer alors afficher les boutons de confirmation-->
 										<form class="form-horizontal" action="actualite.php?supprimer=<?php echo $id_event[$i]; ?>" method="POST">
 											<div class="col-sm-offset-3 col-sm-6">
 												<p style="text-align:center;">
