--- a/connexion.html
+++ b/connexion.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Machiavel Fantasy - Connexion</title>
-		<link 	href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<link rel="icon" href="images/icone_site/favicon.png">
-		<script src="js/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="images/icone_site/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 		<!--script info bulles-->
 		<script src='js/form_info_bulles.js'></script>
@@ -73,7 +73,7 @@
                     <?php 	if(isset($error_connexion)) { ?>
                     <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom:15px;">
                         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                        <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong> <?php echo $error_connexion; ?>
+                        <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong> <?= $error_connexion; ?>
                     </div>
                     <?php 	} ?>
 				</div>
