--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,16 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Machiavel Fantasy - Contact</title>
-		<link 	href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<script src="js/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="images/icone_site/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,6 +20,7 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+        <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
 		<link 	href="css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
 	</head>
 	<body>
