--- a/description.html
+++ b/description.html
@@ -3,15 +3,16 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Machiavel Fantasy - Jeux</title>
-		<script src="js/jquery-2.1.3.min.js"></script>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="images/icone_site/favicon.png">
 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="images/icone_site/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,8 +28,8 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-md-2">
-			<?php /*include_once("accessoires/calendrier_aside.php");
-				  include_once("accessoires/actualite_mini.php");*/
+			<?php include_once("accessoires/calendrier_aside.php");
+				  include_once("accessoires/actualite_mini.php");
 			?>
 		</div>
 		<div class="col-md-8">
