--- a/edit_actualite.html
+++ b/edit_actualite.html
@@ -3,17 +3,16 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Machiavel Fantasy - <?php if(isset($_GET['modifier'])){ ?>Modifier un événement <?php } else{ ?> Créer un évènement <?php } ?></title>
-		<link rel="icon" href="images/icone_site/favicon.png">
-		<script src="js/jquery-2.1.3.min.js"></script>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link 	href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="images/icone_site/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,6 +20,7 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+
 		<link 	href="css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
 		<!--jquery-ui-->
 		<link href="css/jquery-ui.min.css" rel="stylesheet">
@@ -34,8 +34,8 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-md-2">
-			<?php //include_once("accessoires/calendrier_aside.php");
-				  //include_once("accessoires/actualite_mini.php");?>
+			<?php include_once("accessoires/calendrier_aside.php");
+				  include_once("accessoires/actualite_mini.php");?>
 		</div>
 		<div class="col-md-8">
 			<div class="panel panel-default contenu">
