--- a/edit_jeu.html
+++ b/edit_jeu.html
@@ -1,68 +1,107 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="images/icone_site/favicon.png">
-	<title>Machiavel Fantasy - <?php if(isset($_GET['jeu'])){ ?>Modifier un jeu <?php }else{ ?>Ajouter un jeu<?php } ?></title>
-	<script type="text/javascript" src="ckeditor/ckeditor.js"></script>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>Machiavel Fantasy - <?php if(isset($_GET['jeu'])){ ?>Modifier un jeu <?php }else{ ?>Ajouter un jeu<?php } ?></title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <link rel="icon" href="images/icone_site/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-	<link href="css/complement.css" rel="stylesheet">
-</head>
-<body>
-    <?php
-		include_once("accessoires/header.html");
-		include_once("accessoires/menu.html");
-	?>
-    <div class="col-md-2">
-        <?php   include_once("accessoires/calendrier_aside.php");
-                include_once("accessoires/actualite_mini.php");var_dump($_SESSION);?>
-    </div>
-    <div class="col-md-8">
-        <div class="panel panel-default contenu">
-            <div class="panel-body">
-                <h3 class="underline">
-                    <?php if(isset ($_GET['jeu'])){?>
-                    Modifier un jeu
-                    <?php } else{ ?>
-                    Ajouter un jeu
-                    <?php }?>
-                </h3>
-                <form class="form-horizontal" action="edit_jeu.php<?php if (isset ($_GET['jeu']))echo "?jeu=".$id_jeu;?>" method="POST" enctype="multipart/form-data">
-                    <div class="col-sm-10">
-                        <div class="form-group">
-                            <label for="inputArticleTitle" class="col-sm-2 control-label">Titre du jeu</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputArticleTitle"  name="title_jeu" value="<?php if(isset($title_jeu))echo $title_jeu; ?>" required="required">
-                                <?php if(isset($errors_jeu[1])) { ?>
-                                <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
-                                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?php echo $errors_article[1];?>
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <!--jasny-->
+        <script src="js/jasny-bootstrap.min.js"></script>
+        <link href="css/jasny-bootstrap.min.css" rel="stylesheet"/>
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
+        <link href="css/complement.css" rel="stylesheet">
+    </head>
+    <body>
+        <?php
+            include_once("accessoires/header.html");
+            include_once("accessoires/menu.html");
+        ?>
+        <div class="col-md-2">
+            <?php   include_once("accessoires/calendrier_aside.php");
+                    include_once("accessoires/actualite_mini.php");var_dump($_SESSION);?>
+        </div>
+        <div class="col-md-8">
+            <div class="panel panel-default contenu">
+                <div class="panel-body">
+                    <h3 class="underline">
+                        <?php if(isset ($_GET['jeu'])){?>
+                        Modifier un jeu
+                        <?php } else{ ?>
+                        Ajouter un jeu
+                        <?php }?>
+                    </h3>
+                    <form method="POST" enctype="multipart/form-data">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="form-group">
+                                    <label for="inputArticleTitle" class="ccontrol-label">Titre du jeu</label>
+                                    <div>
+                                        <input type="text" class="form-control" id="inputArticleTitle"  name="title_jeu" value="<?php if(isset($title_jeu))echo $title_jeu; ?>" required="required">
+                                        <?php if(isset($errors_jeu[1])) { ?>
+                                        <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
+                                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                            <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?= $errors_article[1];?>
+                                        </div>
+                                        <?php } ?>
+                                    </div>
                                 </div>
-                                <?php } ?>
+                                <div class="form-group">
+                                    <label for="inputtype" class="control-label">Type de jeu</label>
+                                    <select id="inputtype" class="form-control" name="libelle">
+                                        <?php $i=0; while (isset($id_jeu_menu[$i])){ ?>
+                                        <option <?php if(isset($_GET['jeu'])){ if ($libelle_jeu_menu[$i]==$id_type_jeu[$i]){ echo 'selected="selected"';} }?> >
+                                        <?= $libelle_jeu_menu[$i]; ?>
+                                        </option>
+                                        <?php $i++; } ?>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputArticleFile" class="control-label">Image du jeu</label>
+
+                                    <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                                        <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
+                                        <span class="input-group-addon btn btn-default btn-file">
+                                            <span class="fileinput-new"><span class="glyphicon glyphicon-folder-open"></span>&nbsp;&nbsp;Parcourir</span>
+                                            <span class="fileinput-exists">Changer</span>
+                                            <input accept="image/*" id="inputArticleFile" type="file" name="inputArticleFile">
+                                        </span>
+                                        <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Effacer</a>
+                                    </div>
+
+                                    <?php if(isset($errors_jeu[4])) { ?>
+                                    <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
+                                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?= $errors_jeu[4];?>
+                                    </div>
+                                    <?php } ?>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <img id="blah" class="fileinput-preview thumbnail img-responsive" style="width: 200px; height: 200px;" src="images/jeux/<?= $image_jeu; ?>"/>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="editor1" class="col-sm-2 control-label">Contenu</label>
-                            <div class="col-sm-10">
+                            <label for="editor1" class="control-label">Contenu</label>
+                            <div>
                                 <?php if(isset($errors_jeu[2])) { ?>
                                 <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
                                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?php echo $errors_jeu[2];?>
+                                    <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?= $errors_jeu[2];?>
                                 </div>
                                 <?php } ?>
                                 <textarea id="editor1" name="text_jeu" required="required"><?php if(isset($text_jeu)) echo $text_jeu; ?></textarea>
@@ -86,12 +125,11 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <span class="col-sm-2"></span>
-                            <div class="col-sm-10">
+                            <div >
                                 <?php if(isset($errors_jeu[3])) { ?>
                                 <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
                                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                    <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?php echo $errors_article[3];?>
+                                    <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?= $errors_article[3];?>
                                 </div>
                                 <?php } ?>
                                 <!--<p>Activer les commentaires : </p>
@@ -103,31 +141,6 @@
                                 </div>-->
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-2">
-                        <div class="form-group">
-                            <label for="inputtype" class="control-label">Type de jeu</label>
-                            <select id="inputtype" class="form-control" name="libelle">
-                                <?php $i=0; while (isset($id_jeu_menu[$i])){ ?>
-                                    <option <?php if(isset($_GET['jeu'])){ if ($libelle_jeu_menu[$i]==$id_type_jeu[$i]){ echo 'selected="selected"';} }?> >
-                                        <?php echo $libelle_jeu_menu[$i]; ?>
-                                    </option>
-                                <?php $i++; } ?>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputArticleFile" class="control-label">Image du jeu</label>
-                            <label for="inputArticleFile"><img id="blah" class="img-responsive img-rounded" src="<?php if(isset($image_jeu)) {echo $image_jeu;}else{echo 'images/jeux/defaut_jeu.png';} ?>" height="200" style="padding-top: 5px;padding-bottom: 5px;cursor: pointer;" /></label>
-                            <input onchange="readURL(this);" type="file" name="inputArticleFile" class="form-control filestyle" id="inputArticleFile" style="width: 100%;" accept="image/*" data-input="false" data-buttonText="&nbsp;Parcourir" /> <span style="font-size: 12px;">(500 Ko Max)</span>
-                            <?php if(isset($errors_jeu[4])) { ?>
-                            <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
-                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong><?php echo $errors_jeu[4];?>
-                            </div>
-                            <?php } ?>
-                        </div>
-                    </div>
-                    <div class="col-sm-offset-2 col-sm-10">
                         <div class="form-group">
                             <p>
                                 <?php 	if(isset($_GET['jeu']))
@@ -138,25 +151,16 @@
                                 <?php 	} ?>
                             </p>
                         </div>
-                    </div>
-                    <div style="clear: both;"></div>
-                </form>
+                        <div style="clear: both;"></div>
+                    </form>
+                </div>
             </div>
-	    </div>
-    </div>
+        </div>
 
-	<?php
-		include_once("accessoires/footer.html");
-	?>
-    <!--read url pour l'image-->
-    <script type="text/javascript" src="js/readURL.js"></script>
-    <!-- jQuery -->
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <!-- bootstrap js-->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- compteur -->
-    <script type="text/javascript" src="js/compteur.js"></script>
-    <!--Filestyle-->
-    <script src="js/bootstrap-filestyle.min.js"></script>
-</body>
+        <?php
+            include_once("accessoires/footer.html");
+        ?>
+        <!-- compteur -->
+        <script type="text/javascript" src="js/compteur.js"></script>
+    </body>
 </html>
