essai upload style

--- a/edit_jeu.html
+++ b/edit_jeu.html
@@ -14,8 +14,9 @@
         <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-        <link href="css/jasny-bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/fileinput.min.js"></script>
+        <link href="css/fileinput.min.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/fileinput_locale_fr.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -70,11 +71,7 @@
 						</div>
 						<div class="form-group">
 							<label for="inputArticleFile" class="control-label">Image du jeu</label>
-                            <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                                <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
-                                <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span><input accept="image/*" onchange="readURL(this);" id="inputArticleFile" type="file" name="inputArticleFile"></span>
-                                <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-                            </div>
+                            <input id="inputArticleFile" name="inputArticleFile" type="file" class="file" data-preview-file-type="text">
                             <?php if(isset($errors_jeu[4])) { ?>
 							<div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom: 0">
 								<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -84,7 +81,9 @@
 						</div>
 					</div>
 					<div class="col-md-5">
-						<img id="blah" class="img-responsive img-rounded" src="images/jeux/<?= $image_jeu; ?>"/>
+						<div style="overflow: hidden;height: 200px;width: 200px; float: none;">
+                            <img id="blah" class=" img-rounded" src="images/jeux/<?= $image_jeu; ?>"/>
+                        </div>
 					</div>
 				</div>
 				<div class="form-group">
