--- a/connexion.html
+++ b/connexion.html
@@ -78,7 +78,7 @@
                     <?php 	} ?>
 				</div>
 			</div>
-			<div class="col-sm-6 col-md-6 espace_connexion">
+			<div class="col-sm-6 col-md-6 espace_connexion" style="padding-right:0;">
 				<div class="thumbnail membre">
 					<div>
 						<h3 class="underline">S'inscrire</h3>
