--- a/liste_jeu.html
+++ b/liste_jeu.html
@@ -63,11 +63,11 @@
 					}
 					else
 					{ ?>
-						<div class="message_erreur">Il n'y a aucun jeu pour le momment !</div>
+						<div class="message_erreur">Il n'y a aucun jeu pour le momment.</div>
 				<?php 
 					}
 			} else { ?>
-				<div class="message_erreur">Ce type de jeu n'existe pas !</div>
+				<div class="message_erreur">Le type de jeu que vous recherchez n'existe pas.</div>
 			<?php } ?>
 		</div>
 		<?php
