modif edit jeu (je ne sais plus c'est quoi)

--- a/edit_jeu.html
+++ b/edit_jeu.html
@@ -97,7 +97,6 @@
                             <!--<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
                                 Launch demo modal
                             </button>-->
-
                             <!-- Modal -->
                             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
@@ -123,7 +122,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4">
-                                                    <div class="preview cropper-bg" style="overflow: hidden;height: 200px !important;width: 150px !important; float: none; border-radius: 4px;" >
+                                                    <div class="preview cropper-bg" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;border-radius: 5px;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
                                                         <img src=""/>
                                                     </div>
                                                 </div>
@@ -146,8 +145,8 @@
 						</div>
 					</div>
 					<div class="col-md-5">
-                        <div class="preview cropper-bg" style="overflow: hidden;height: 200px;width: 150px; float: none; border-radius: 4px;">
-                            <img src="images/jeux/<?= $image_jeu; ?>"/>
+                        <div class="preview cropper-bg" style="overflow: hidden;height: 200px;width: 150px; float: noneborder: 3px solid #fff;border-radius: 5px;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;">
+                            <label for="inputArticleFile" style="cursor: pointer;"><img src="images/jeux/<?= $image_jeu; ?>"/></label>
                         </div>
 					</div>
 				</div>
