--- a/forum/accessoires/menu.html
+++ b/forum/accessoires/menu.html
@@ -11,7 +11,7 @@
 			</ul>		
 		</div>
 		<?php if(isset($_SESSION['id_user']) && $_SESSION['droits']==3){ ?>
-			<a href="#" class="link_left"> Panneau d'administration</a>
+			<a href="../admin" class="link_left"> Panneau d'administration</a>
 		<?php } ?>
 	</div>
 	
